--- a/templates/home.html
+++ b/templates/home.html
@@ -3,20 +3,37 @@
     <head>
         <meta charset="utf-8">
         <title>Cheesy Life</title>
+        <link rel="icon" href="../static/images/favicon.png" type="image/x-icon">
+        <link rel="stylesheet" href="../static/styles/style1.css">
     </head>
+
+
     <body style="margin: 0px; padding: 0px;">
-        <header style="background-color: #FF0000; height: 70px; width: 100%;">
+        <header>
+            <div class="header-content">
+                <div class="logo-container">
+                    <img src="../static/images/favicon.png" alt="Header Image">
+                    <h1>Cheesy Life</h1>
+                </div>
+                <nav>
+                    <ul>
+                        <li><a href="home.html">Home</a></li>
+                        <li><a href="types.html">Cheese Types</a></li>
+                        <li><a href="recipes.html">Recipes</a></li>
+                        <li><a href="about.html">About</a></li>
+                    </ul>
+                </nav>
+            </div>
         </header>
-        <footer style="background-color: #00FF00; 
-                        height: 60px; 
-                        width: 100%;
-                        position: absolute;  
-                        display:flex; 
-                        flex-direction: column; 
-                        justify-content: center; 
-                        align-items: center;
-                        bottom: 0">
-            <p>Cheese is life!</p>
+
+        <main>
+            <img src="https://stylesatlife.com/wp-content/uploads/2022/08/cheese-varieties.jpg" alt="Types of cheese" style="display: block; margin: 0 auto;">
+        </main>
+
+
+        <footer>
+            <p>Contact us: fakeemail@noemail.com +21260000000<br>
+            00, No Street, Casablanca, Morocco</p>
         </footer>
     </body>
 </html>
