--- a/templates/home.html
+++ b/templates/home.html
@@ -32,7 +32,7 @@
 
 
         <footer>
-            <p>Contact us: fakeemail@noemail.com +21260000000<br>
+            <p>Contact us: testemail@noemail.com +21260000000<br>
             00, No Street, Casablanca, Morocco</p>
         </footer>
     </body>
