--- a/templates/recipes.html
+++ b/templates/recipes.html
@@ -27,7 +27,7 @@
         </header>
 
         <main>
-            <img src="https://stylesatlife.com/wp-content/uploads/2022/08/cheese-varieties.jpg" alt="Types of cheese" style="display: block; margin: 0 auto;">
+            Recipes go here
         </main>
 
 
