--- a/templates/types.html
+++ b/templates/types.html
@@ -60,7 +60,6 @@
                 <span id="range-value">5</span> $/100g
                 <script>
                 function updateValue(value) {
-                  // Update the text content of the span element with the current value
                   document.getElementById("range-value").textContent = value;
                 }
                 </script>
@@ -68,6 +67,7 @@
                 <input type="text" id="country-filter" placeholder="Country...">
                 <button onclick="search_function()">Filter</button>
             </section>
+
             <section class="results-section">
                 <h2>Search Results</h2>
                 <!-- Search results go here -->
@@ -76,8 +76,7 @@
 
 
         <footer>
-            <p>Contact us: fakeemail@noemail.com +21260000000<br>
-            00, No Street, Casablanca, Morocco</p>
+            <p>Life is better with cheese!</p>
         </footer>
     </body>
 </html>
