--- a/static/styles/style_filter.css
+++ b/static/styles/style_filter.css
@@ -1,3 +1,7 @@
+/*
+    Styles for filters in the type.html page
+*/
+
 .filter-section {
     width: 20%; float:left;
     margin-inline-start: 20px;
