js and python scripts to handle filters

--- a/templates/home.html
+++ b/templates/home.html
@@ -17,10 +17,10 @@
                 </div>
                 <nav>
                     <ul>
-                        <li><a href="home.html">Home</a></li>
-                        <li><a href="types.html">Cheese Types</a></li>
-                        <li><a href="recipes.html">Recipes</a></li>
-                        <li><a href="about.html">About</a></li>
+                        <li><a href="home">Home</a></li>
+                        <li><a href="types">Cheese Types</a></li>
+                        <li><a href="recipes">Recipes</a></li>
+                        <li><a href="about">About</a></li>
                     </ul>
                 </nav>
             </div>
