--- a/templates/types.html
+++ b/templates/types.html
@@ -6,6 +6,9 @@
         <link rel="icon" href="../static/images/favicon.png" type="image/x-icon">
         <link rel="stylesheet" href="../static/styles/style1.css">
         <link rel="stylesheet" href="../static/styles/style_filter.css">
+
+        <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+        <script type="text/javascript" src="../static/scripts/filter.js"></script>
     </head>
 
 
@@ -65,7 +68,7 @@
                 </script>
                 <h3>Country</h3>
                 <input type="text" id="country-filter" placeholder="Country...">
-                <button onclick="search_function()">Filter</button>
+                <button id="filter-button">Filter</button>
             </section>
 
             <section class="results-section">
