--- a/templates/home.html
+++ b/templates/home.html
@@ -20,10 +20,10 @@
                 </div>
                 <nav>
                     <ul>
-                        <li><a href="home.html">Home</a></li>
-                        <li><a href="types.html">Cheese Types</a></li>
-                        <li><a href="recipes.html">Recipes</a></li>
-                        <li><a href="about.html">About</a></li>
+                        <li><a href="/">Home</a></li>
+                        <li><a href="types">Cheese Types</a></li>
+                        <li><a href="recipes">Recipes</a></li>
+                        <li><a href="about">About</a></li>
                     </ul>
                 </nav>
             </div>
@@ -33,12 +33,12 @@
                 <div id="image_container">
                     <img id="im" src="https://stylesatlife.com/wp-content/uploads/2022/08/cheese-varieties.jpg" usemap="#cheeseMap">
                 <map name="cheeseMap">
-                    <area data-key="Fresh Cheese" title="Fresh Cheese" href="https://github.com/MO1-dot-618/cheesy-life" coords="135,170 209,76 386,256 " shape="polygon">
-                    <area data-key="Soft Cheese" title="Soft Cheese" href="https://github.com/MO1-dot-618/cheesy-life" coords="294,63 393,23 391,225 " shape="polygon">
-                    <area data-key="Semi Soft Cheese" title="Semi Soft Cheese" href="https://github.com/MO1-dot-618/cheesy-life" coords="458,37 580,82 433,217 " shape="polygon">
-                    <area data-key="Semi Hard Cheese" title="Semi Hard Cheese" href="https://github.com/MO1-dot-618/cheesy-life" coords="646,107 701,211 416,266 " shape="polygon">
-                    <area data-key="Hard Cheese" title="Hard Cheese" href="https://github.com/MO1-dot-618/cheesy-life" coords="450,305 719,304 687,433 " shape="polygon">
-                    <area data-key="Blue Cheese" title="Blue Cheese" href="https://github.com/MO1-dot-618/cheesy-life" coords="301,358 131,407 218,519 " shape="polygon">
+                    <area data-key="Fresh Cheese" title="Fresh Cheese" href="types.html" coords="135,170 209,76 386,256 " shape="polygon">
+                    <area data-key="Soft Cheese" title="Soft Cheese" href="types.html" coords="294,63 393,23 391,225 " shape="polygon">
+                    <area data-key="Semi Soft Cheese" title="Semi Soft Cheese" href="types.html" coords="458,37 580,82 433,217 " shape="polygon">
+                    <area data-key="Semi Hard Cheese" title="Semi Hard Cheese" href="types.html" coords="646,107 701,211 416,266 " shape="polygon">
+                    <area data-key="Hard Cheese" title="Hard Cheese" href="types.html" coords="450,305 719,304 687,433 " shape="polygon">
+                    <area data-key="Blue Cheese" title="Blue Cheese" href="types.html" coords="301,358 131,407 218,519 " shape="polygon">
                 </map>
                 </div>
             </div>
