--- a/website/templates/types.html
+++ b/website/templates/types.html
@@ -35,12 +35,12 @@
                 <h2>Search filter</h2>
                 <h3>Texture</h3>
                 <ul class="filter-list">
-                    <li><input type="checkbox" id="texture-fresh"><label for="texture-fresh">Fresh</label></li>
-                    <li><input type="checkbox" id="texture-soft"><label for="texture-soft">Soft</label></li>
-                    <li><input type="checkbox" id="texture-semi-soft"><label for="texture-semi-soft">Semi-Soft</label></li>
-                    <li><input type="checkbox" id="texture-semi-hard"><label for="texture-semi-hard">Semi-Hard</label></li>
-                    <li><input type="checkbox" id="texture-hard"><label for="texture-hard">Hard</label></li>
-                    <li><input type="checkbox" id="texture-blue"><label for="texture-blue">Blue</label></li>
+                    <li><input type="checkbox" id="texture-fresh"><label for="texture-fresh">fresh</label></li>
+                    <li><input type="checkbox" id="texture-soft"><label for="texture-soft">soft</label></li>
+                    <li><input type="checkbox" id="texture-semi-soft"><label for="texture-semi-soft">semi-soft</label></li>
+                    <li><input type="checkbox" id="texture-semi-hard"><label for="texture-semi-hard">semi-sard</label></li>
+                    <li><input type="checkbox" id="texture-hard"><label for="texture-hard">hard</label></li>
+                    <li><input type="checkbox" id="texture-blue"><label for="texture-blue">blue</label></li>
                 </ul>
                 <h3>Source</h3>
                 <ul class="filter-list">
@@ -73,7 +73,7 @@
 
             <section class="results-section">
                 <h2>Search Results</h2>
-                <!-- Search results go here -->
+                <div id="search-results"></div>
             </section>
         </main>
 
