Fixed search results

--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -33,12 +33,12 @@
                 <div id="image_container">
                     <img id="im" src="https://stylesatlife.com/wp-content/uploads/2022/08/cheese-varieties.jpg" usemap="#cheeseMap">
                 <map name="cheeseMap">
-                    <area data-key="Fresh Cheese" title="Fresh Cheese" href="types.html" coords="135,170 209,76 386,256 " shape="polygon">
-                    <area data-key="Soft Cheese" title="Soft Cheese" href="types.html" coords="294,63 393,23 391,225 " shape="polygon">
-                    <area data-key="Semi Soft Cheese" title="Semi Soft Cheese" href="types.html" coords="458,37 580,82 433,217 " shape="polygon">
-                    <area data-key="Semi Hard Cheese" title="Semi Hard Cheese" href="types.html" coords="646,107 701,211 416,266 " shape="polygon">
-                    <area data-key="Hard Cheese" title="Hard Cheese" href="types.html" coords="450,305 719,304 687,433 " shape="polygon">
-                    <area data-key="Blue Cheese" title="Blue Cheese" href="types.html" coords="301,358 131,407 218,519 " shape="polygon">
+                    <area data-key="Fresh Cheese" title="Fresh Cheese" href="search?texture=fresh&price=50&" coords="135,170 209,76 386,256 " shape="polygon">
+                    <area data-key="Soft Cheese" title="Soft Cheese" href="search?texture=soft&price=50&" coords="294,63 393,23 391,225 " shape="polygon">
+                    <area data-key="Semi Soft Cheese" title="Semi Soft Cheese" href="search?texture=semi-soft&price=50&" coords="458,37 580,82 433,217 " shape="polygon">
+                    <area data-key="Semi Hard Cheese" title="Semi Hard Cheese" href="search?texture=semi-hard&price=50&" coords="646,107 701,211 416,266 " shape="polygon">
+                    <area data-key="Hard Cheese" title="Hard Cheese" href="search?texture=hard&price=50&" coords="450,305 719,304 687,433 " shape="polygon">
+                    <area data-key="Blue Cheese" title="Blue Cheese" href="search?texture=blue&price=50&" coords="301,358 131,407 218,519 " shape="polygon">
                 </map>
                 </div>
             </div>
