--- a/website/templates/types.html
+++ b/website/templates/types.html
@@ -72,8 +72,8 @@
             </section>
 
             <section class="results-section">
-                <h2>Search Results</h2>
-                <div id="search-results"></div>
+                <div id="results"></div>
+
             </section>
         </main>
 
