--- a/website/templates/results.html
+++ b/website/templates/results.html
@@ -70,6 +70,9 @@
                     <p><strong>Price:</strong> {{ cheese.price }}</p>
                     <p><strong>Country:</strong> {{ cheese.country }}</p>
                     <p class="description"><strong>Description:</strong> {{ cheese.description }}</p>
+                    <a href="/cheese_id/id={{ cheese.id }}">
+                        <button id="cheese-id-button">See more</button>
+                    </a>
                 </div>
             {% endfor %}
         {% endif %}
