--- a/website/templates/types.html
+++ b/website/templates/types.html
@@ -22,9 +22,9 @@
                 <nav>
                     <ul>
                         <li><a href="/">Home</a></li>
-                        <li><a href="types">Cheese Types</a></li>
-                        <li><a href="recipes">Recipes</a></li>
-                        <li><a href="about">About</a></li>
+                        <li><a href="/types">Cheese Types</a></li>
+                        <li><a href="/recipes">Recipes</a></li>
+                        <li><a href="/about">About</a></li>
                     </ul>
                 </nav>
             </div>
