Created recipes db. Linked it with front end.

--- a/website/templates/about.html
+++ b/website/templates/about.html
@@ -5,8 +5,10 @@
         <title>Cheesy Life</title>
         <link rel="icon" href="../static/images/favicon.png" type="image/x-icon">
         <link rel="stylesheet" href="../static/styles/style1.css">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
         <style>
             text-about {
+                font-family: 'Roboto', sans-serif;
                 font-size: 16px; /* Set the font size */
                 line-height: 1.6; /* Set the line height for better readability */
                 color: #333; /* Set the text color */
@@ -16,6 +18,7 @@
                 color: rgb(8, 120, 200);
             }
         </style>
+        
     </head>
 
 
