--- a/website/templates/cheese_id.html
+++ b/website/templates/cheese_id.html
@@ -5,6 +5,7 @@
         <title>Cheesy Life</title>
         <link rel="icon" href="../static/images/favicon.png" type="image/x-icon">
         <link rel="stylesheet" href="../static/styles/style1.css">
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     </head>
 
 
@@ -37,6 +38,7 @@
                     <p><strong>Price:</strong> {{ cheese.price }}</p>
                     <p><strong>Country:</strong> {{ cheese.country }}</p>
                     <p class="description"><strong>Description:</strong> {{ cheese.description }}</p>
+                    
                 </div>
             {% endif %}
         </main>
