--- a/website/static/styles/style1.css
+++ b/website/static/styles/style1.css
@@ -5,17 +5,21 @@
 
 /* Apply background color to the body */
 body {
+    font-family: 'Roboto', sans-serif;
     background-color:#FFCF81;
 }
 
 /* Apply different background color to header and footer */
 header {
+    font-family: 'Roboto', sans-serif;
     background-color: white;
     height: 100px; width: 100%;
 }
 
 footer {
+
     background-color: white;
+    font-family: 'Roboto', sans-serif;
     color: #ed861f; 
     height: 60px; 
     width: 100%;
