--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -8,6 +8,7 @@
         <link rel="stylesheet" href="../static/styles/main_im.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
         <script src="https://cdn.jsdelivr.net/npm/imagemapster@1.6.0/dist/jquery.imagemapster.min.js"></script>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     </head>
 
 
