--- a/website/templates/types.html
+++ b/website/templates/types.html
@@ -9,6 +9,7 @@
 
         <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
         <script type="text/javascript" src="../static/scripts/filter.js"></script>
+        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     </head>
 
 
