--- a/website/templates/types.html
+++ b/website/templates/types.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Cheesy Life</title>
+        <title>Filters - Cheesy Life</title>
         <link rel="icon" href="../static/images/favicon.png" type="image/x-icon">
         <link rel="stylesheet" href="../static/styles/style1.css">
         <link rel="stylesheet" href="../static/styles/style_filter.css">
