--- a/website/templates/about.html
+++ b/website/templates/about.html
@@ -2,7 +2,7 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Cheesy Life</title>
+        <title>About us - Cheesy Life</title>
         <link rel="icon" href="../static/images/favicon.png" type="image/x-icon">
         <link rel="stylesheet" href="../static/styles/style1.css">
         <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
