--- a/website/templates/cheese_id.html
+++ b/website/templates/cheese_id.html
@@ -2,10 +2,12 @@
 <html lang="en">
     <head>
         <meta charset="utf-8">
-        <title>Cheesy Life</title>
+        <title>Cheese information - Cheesy Life</title>
         <link rel="icon" href="../static/images/favicon.png" type="image/x-icon">
         <link rel="stylesheet" href="../static/styles/style1.css">
-        <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+        <link rel="stylesheet" href="../static/styles/style2.css">
+        <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+        <script type="text/javascript" src="../static/scripts/nutrition_api.js"></script>
     </head>
 
 
@@ -38,7 +40,10 @@
                     <p><strong>Price:</strong> {{ cheese.price }}</p>
                     <p><strong>Country:</strong> {{ cheese.country }}</p>
                     <p class="description"><strong>Description:</strong> {{ cheese.description }}</p>
-                    
+                    <div id="nutrition-facts", data-name="{{ cheese.name }}"> </div>
+                    <a href="/recipes/{{ cheese.id }}">
+                        <button id="cheese-id-button">See Recipes</button>
+                    </a>
                 </div>
             {% endif %}
         </main>
