--- a/website/templates/recipes.html
+++ b/website/templates/recipes.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="utf-8">
-    <title>Cheesy Life</title>
+    <title>Recipes - Cheesy Life</title>
     <link rel="icon" href="../static/images/favicon.png" type="image/x-icon">
     <link rel="stylesheet" href="../static/styles/style1.css">
     <link rel="stylesheet" href="../static/styles/recipe.css">
