--- a/website/templates/recipes.html
+++ b/website/templates/recipes.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="../static/styles/style1.css">
     <link rel="stylesheet" href="../static/styles/recipe.css">
     <link href="https://fonts.googleapis.com/css2?family=Cinzel+Decorative&display=swap" rel="stylesheet">
+    <script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="../static/scripts/recipes_api.js"></script>
 </head>
 <body style="margin: 0px; padding: 0px;">
     <header>
@@ -38,6 +40,7 @@
                 </div>
                 {% endfor %}
             </div>
+            <div class="recipe-container" id="api-recipe-container"></div>
         </section>
     </main>
     <footer>
