--- a/website/templates/results.html
+++ b/website/templates/results.html
@@ -72,7 +72,7 @@
                     <a href="/cheese_id/id={{ cheese.id }}">
                         <button id="cheese-id-button">See more</button>
                     </a>
-                    <a href="/recipes/{{ cheese.id }}">
+                    <a href="/recipes/{{ cheese.id }}&{{ cheese.name }}">
                         <button id="cheese-id-button">See Recipes</button>
                     </a>
                 </div>
